src/app/(main)/focus/page.module.scss
.focusPage {
	display: flex;
	flex-direction: column;
	flex: 1;
	padding: 10px 0px 10px 20px;
	height: 100%;
	position: relative;

	@media screen and (max-width: 768px) {
		padding: 0;
	}
}

.header {
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 40px;

	@media screen and (max-width: 768px) {
		transform: translate(50px, 8px);
		margin-bottom: 10px;
	}
}

.timer {
	width: 100%;
	height: 100%;
	overflow: hidden;
	display: flex;
	justify-content: center;
	align-items: center;
}

.settingsButton {
	border-radius: 5px;
	padding: 5px 7px;
	display: flex;
	align-items: center;
	justify-content: center;
	transition: background-color 0.2s;

	&:hover {
		background-color: var(--secondary);
	}

	@media screen and (max-width: 768px) {
		transform: translateX(-50px);
	}
}

